[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Images/UI/raid_bg.png" type="Texture" id=1]
[ext_resource path="res://src/UI/RaidTarget.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Images/UI/Targets/impede_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/UI/Targets/horses_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/UI/Targets/militia_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/UI/Targets/chaos_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/UI/Targets/supplies_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/UI/Targets/scout_icon.png" type="Texture" id=8]
[ext_resource path="res://src/UI/RaidOrders.gd" type="Script" id=9]
[ext_resource path="res://assets/Fonts/CormorantGaramond/CormorantGaramond-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://src/UI/SignOrdersButton.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="GDScript" id=2]
script/source = "extends Label



func _on_RaidOrders_orders_changed(orders_remaining):
	text = \"Orders remaining: %d\" % orders_remaining
"

[node name="RaidOrders" type="Control"]
anchor_right = 0.821289
anchor_bottom = 0.407552
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targets" type="HBoxContainer" parent="."]
margin_left = 25.0
margin_top = 30.0
margin_right = 807.0
margin_bottom = 230.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Militia" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_right = 133.0
margin_bottom = 200.0
icon = ExtResource( 5 )

[node name="Horses" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 153.0
margin_right = 257.0
margin_bottom = 200.0
icon = ExtResource( 4 )

[node name="Impede" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 277.0
margin_right = 381.0
margin_bottom = 200.0
icon = ExtResource( 3 )

[node name="Supplies" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 401.0
margin_right = 505.0
margin_bottom = 200.0
icon = ExtResource( 7 )

[node name="Chaos" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_right = 629.0
margin_bottom = 200.0
icon = ExtResource( 6 )

[node name="Scout" parent="Targets" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 649.0
margin_right = 753.0
margin_bottom = 200.0
icon = ExtResource( 8 )

[node name="OrdersRemainingLabel" type="Label" parent="."]
margin_left = 57.211
margin_top = 238.379
margin_right = 280.211
margin_bottom = 273.379
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Orders remaining: X"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignOrdersButton" parent="." instance=ExtResource( 11 )]
margin_left = 496.888
margin_top = 234.141
margin_right = 794.888
margin_bottom = 278.141

[node name="PostSignatureTimer" type="Timer" parent="."]
one_shot = true
[connection signal="done" from="SignOrdersButton" to="." method="_on_SignOrdersButton_done"]
